# hagenuk-clean-code-teilnehmer-2024

./: README.md
VectorFillerUebung/: CMakeLists.txt  main.cpp
VectorFillerUebung/bootstrap/: Bootstrap.h
VectorFillerUebung/client/: Client.h
VectorFillerUebung/client/impl/: ClientImpl.h
VectorFillerUebung/collections/: AbstractVectorFactory.h  VectorFactory.h
VectorFillerUebung/collections/impl/builder/: VectorFactoryBuilder.h
VectorFillerUebung/collections/impl/decorators/: AbstractVectorFactoryDecorator.h  VectorFactoryBenchmarkDecorator.h  VectorFactoryLoggerDecorator.h  VectorFactorySecureDecorator.h
VectorFillerUebung/collections/impl/parallel/: VectorFactoryAutoImpl.h  VectorFactoryParallelImpl.h
VectorFillerUebung/collections/impl/sequential/: VectorFactorySequentialImpl.h
VectorFillerUebung/generator/: Generator.h  GeneratorBuilder.h  IntGenerator.h
VectorFillerUebung/generator/impl/generic/: GenericGeneratorImpl.h
VectorFillerUebung/generator/impl/random/: MersenneTwisterNumberGenerator.h  MersenneTwisterNumberGeneratorFactory.h
VectorFillerUebung/time/: Stopwatch.h
VectorFillerUebung/time/impl/: StopwatchImpl.h
interface-segregation-event/src/de/clientside/: Main.java
interface-segregation-event/src/de/tiere/: Schwein.java
interface-segregation-gui/src/de/limago/: Fenster.java
